--- a/ServiceStack.Examples/ServiceStack.Examples.Clients/default.css
+++ b/ServiceStack.Examples/ServiceStack.Examples.Clients/default.css
@@ -14,10 +14,15 @@
 #footer-links
 {
 	border-top: solid 2px #ccc;
-	margin: 9em 0 1em 0;
+	margin: 9em 0 2em 0;
 	padding-top: 1em;
 	text-align: center;
 	font-size: larger;
+}
+#footer-links img
+{
+	float: left;
+	margin-top: -10px;
 }
 .r 
 {
