--- a/trunk/html/default.css
+++ b/trunk/html/default.css
@@ -1,14 +1,7 @@
-/* http://meyerweb.com/eric/tools/css/reset/ */
-/* v1.0 | 20080212 */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
+/*http://meyerweb.com/eric/tools/css/reset/
+v1.0 | 20080212*/
+HTML, BODY, DIV, SPAN, APPLET, OBJECT, IFRAME, H1, H2, H3, H4, H5, H6, P, BLOCKQUOTE, PRE, A, ABBR, ACRONYM, ADDRESS, BIG, CITE, CODE, DEL, DFN, EM, FONT, IMG, INS, KBD, Q, S, SAMP, SMALL, STRIKE, STRONG, SUB, SUP, TT, VAR, B, U, I, CENTER, DL, DT, DD, OL, UL, LI, FIELDSET, FORM, LABEL, LEGEND, TABLE, CAPTION, TBODY, TFOOT, THEAD, TR, TH, TD
+{
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -17,59 +10,59 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	vertical-align: baseline;
 	background: transparent;
 }
-body {
+BODY
+{
 	line-height: 1;
 }
-ol, ul {
+OL, UL
+{
 	list-style: none;
 }
-blockquote, q {
+BLOCKQUOTE, Q
+{
 	quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
+BLOCKQUOTE:before, BLOCKQUOTE:after, Q:before, Q:after
+{
 	content: '';
 	content: none;
 }
-
-/* remember to define focus styles! */
-:focus {
+/*remember to define focus styles!*/
+:focus
+{
 	outline: 0;
 }
-
-/* remember to highlight inserts somehow! */
-ins {
+/*remember to highlight inserts somehow!*/
+INS
+{
 	text-decoration: none;
 }
-del {
+DEL
+{
 	text-decoration: line-through;
 }
-
-/* tables still need 'cellspacing="0"' in the markup */
-table {
+/*tables still need 'cellspacing="0"' in the markup*/
+TABLE
+{
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-/* end reset */
-
-/* start global element styles */
-BODY 
+/*end reset
+start global element styles*/
+BODY
 {
 	font: 13px/18px Arial;
 	color: #333;
 }
 BODY.host
 {
-	padding: 20px;
 }
-
 H2
 {
 	color: #555;
-	font: 28px/34px Trebuchet MS;
+	font: 28px/34px "Trebuchet MS";
 	padding: 15px 10px;
 }
-
 P
 {
 	line-height: 1.5em;
@@ -78,24 +71,22 @@ P
 }
 P A
 {
-	margin: 0 .2em;
+	margin: 0 0.2em;
 }
-p ACRONYM
+P ACRONYM
 {
-	margin: 0 .2em;
-	border-bottom: dotted 1px #333;
-	background: #f1fcf1;
+	margin: 0 0.2em;
+	border-bottom: 1px dotted #333;
+	background: #F1FCF1;
 }
 H3
 {
 	color: #063;
-	font: 28px/34px Trebuchet MS;
-	padding-bottom: 15px;
 }
 H4
 {
 	color: #555;
-	margin: 1em 0 .5em 0;
+	margin: 1em 0 0.5em;
 	font: bold 18px/24px Arial;
 }
 UL
@@ -104,7 +95,33 @@ UL
 	line-height: 1.5em;
 	padding-left: 20px;
 }
-A IMG 
+A IMG
 {
 	border: none;
+}
+#btn-googlecode
+{
+	margin: 20px 0 0 736px;
+	position: absolute;
+}
+H3#logo-title
+{
+	margin-top: -57px;
+	margin-right: 0;
+	margin-bottom: 56px;
+	margin-left: 120px;
+	color: #0E5710;
+	font-size: 18px;
+	font-weight: bold;
+	font-family: Arial;
+}
+#content
+{
+	width: 900px;
+	padding: 20px;
+}
+#img-overview
+{
+	float: right;
+	margin: 0 0 0 20px;
 }
