added cosmetic fixes to servicestack.net website

--- a/Common/Northwind.Benchmarks/Northwind.Benchmarks.Console/_Results/Serialization/default.css
+++ b/Common/Northwind.Benchmarks/Northwind.Benchmarks.Console/_Results/Serialization/default.css
@@ -35,6 +35,12 @@ SPAN.summary
   width: 850px;
   font-size: 13px;
 }
+SPAN.summary STRONG
+{
+  padding: 0 5px;
+  font-size: 18px;
+  line-height: 28px;
+}
 
 #combined H3
 {
