--- a/trunk/MonoTouch.Examples/html/css/remoteinfo.css
+++ b/trunk/MonoTouch.Examples/html/css/remoteinfo.css
@@ -3,31 +3,60 @@
 	width: 980px;
 	padding-bottom: 20px;
 }
+BODY.large
+{
+	background: url(bg-body-large.png) repeat-y;
+	padding-left: 40px;
+	width: 980px;
+}
 P
 {
-	width: auto;	
+	width: auto;
 }
-.section {
+.section
+{
 	padding: 0 20px;
 }
 #title-img
 {
 	margin: 10px;
 }
+H2
+{
+	padding-left: 10px;
+	font-family: "Myriad Pro", HelveticaNeue-Light, "Helvetica Neue Light", "Lucida Grande", "Helvetica Neue", Arial, "Lucida Sans Unicode", sans-serif;
+	font-size: 24px;
+	/*[disabled]font-weight:bold;*/
+}
 H3.step
 {
-	margin: 0 0 10px 0;
+	margin: 0 0 10px;
 	padding: 10px;
-	background: #f1f1f1;
+	background: #F1F1F1;
+	font-size: 16px;
+}
+H3.step A
+{
+	color: #00C;
+	text-decoration: none;
+	border-right: 1px solid #CCC;
+	padding-right: 10px;
+	margin-right: 5px;
+}
+H3.step A:hover
+{
+	text-decoration: underline;
 }
 H3
 {
 	padding: 10px 0;
+	font-size: 16px;
 }
 H4
 {
 	padding: 0;
 	margin: 0;
+	font-size: 14px;
 }
 HR
 {
@@ -71,17 +100,17 @@ P.clear
 .page-nav .previous
 {
 	float: left;
-}	
+}
 .page-nav .next
 {
 	float: right;
 }
-code
+CODE
 {
 	margin: 10px 0;
 	display: block;
 	white-space: pre;
-	background: #f1fff1;
+	background: #F1FFF1;
 }
 UL
 {
