--- a/trunk/ServiceStack.Examples/ServiceStack.Examples.Clients/default.css
+++ b/trunk/ServiceStack.Examples/ServiceStack.Examples.Clients/default.css
@@ -17,7 +17,7 @@ BODY
 #footer-links
 {
 	margin: 9em 0 2em;
-	padding-top: 20px;
+	padding-top: 1em;
 	text-align: center;
 	font-size: larger;
 	border-top: 1px solid #DCDCDC;
