--- a/trunk/Common/ServiceStack.Redis/RedisWebServices/RedisWebServices.Host/AjaxClient/tests/testLib.css
+++ b/trunk/Common/ServiceStack.Redis/RedisWebServices/RedisWebServices.Host/AjaxClient/tests/testLib.css
@@ -1,28 +1,14 @@
-/* testLogger.css */
+/* logger.css */
 /*
-Copyright (c) 2009, Yahoo! Inc. All rights reserved.
+Copyright (c) 2010, Yahoo! Inc. All rights reserved.
 Code licensed under the BSD License:
-http://developer.yahoo.net/yui/license.txt
-version: 2.7.0
-*/
-
-/*
-@import url(skins/sam/logger.css);
-@import url(skins/sam/logger-skin.css);
-*/
-
-.yui-log{padding-top:3em;}.yui-log-container{width:40em;}.yui-log .yui-log-bd{height:60em;}.yui-log .yui-log-btns{display:none;}.yui-log .yui-log-ft .yui-log-sourcefilters{visibility:hidden;}.yui-log .yui-log-hd{display:none;}.yui-log .yui-log-ft{position:absolute;top:0;}.pass{background-color:green;font-weight:bold;color:white;}.fail{background-color:red;font-weight:bold;color:white;}.ignore{background-color:#666;font-weight:bold;color:white;}
-
-/*
-Copyright (c) 2009, Yahoo! Inc. All rights reserved.
-Code licensed under the BSD License:
-http://developer.yahoo.net/yui/license.txt
-version: 2.7.0
+http://developer.yahoo.com/yui/license.html
+version: 2.8.1
 */
 /* logger default styles */
 /* default width: 31em */
 /* default font-size 77% */
-.yui-log {padding: 2em 1em 1em 1em;width:55%;background-color:#AAA;color:#000;border:1px solid black;font-family:monospace;font-size:100%;text-align:left;z-index:9000;}
+.yui-log {padding:1em;width:31em;background-color:#AAA;color:#000;border:1px solid black;font-family:monospace;font-size:97%;text-align:left;z-index:9000;}
 
 /* for containers built from scratch */
 .yui-log-container {position:absolute;top:1em;right:1em;}
@@ -42,7 +28,7 @@ version: 2.7.0
 
 /* body */
 
-.yui-log .yui-log-bd {width:100%;height:800px;background-color:#FFF;border:1px solid gray;overflow:auto;} /* height is controlled here: default 20em*/
+.yui-log .yui-log-bd {width:100%;height:20em;background-color:#FFF;border:1px solid gray;overflow:auto;} /* height is controlled here: default 20em*/
 .yui-log p {margin:1px;padding:.1em;}
 .yui-log pre {margin:0;padding:0;}
 
@@ -71,3 +57,12 @@ version: 2.7.0
 .yui-log .time {background-color:#A6C9D7;} /* A6C9D7 blue */
 .yui-log .window {background-color:#F2E886;} /* F2E886 tan */
 
+
+/* testlogger.css */
+/*
+Copyright (c) 2010, Yahoo! Inc. All rights reserved.
+Code licensed under the BSD License:
+http://developer.yahoo.com/yui/license.html
+version: 2.8.1
+*/
+.yui-log{padding-top:3em;}.yui-log-container{width:60em;}.yui-log .yui-log-bd{height:60em;}.yui-log .yui-log-btns{display:none;}.yui-log .yui-log-ft .yui-log-sourcefilters{visibility:hidden;}.yui-log .yui-log-hd{display:none;}.yui-log .yui-log-ft{position:absolute;top:0;}.pass{background-color:green;font-weight:bold;color:white;}.fail{background-color:red;font-weight:bold;color:white;}.ignore{background-color:#666;font-weight:bold;color:white;}
